# shadcn_for_pyqt

./: pyproject.toml
src/shadcn_for_pyqt/: preview.py
src/shadcn_for_pyqt/theming/: _internal_colors.py  colors.py  radii.py
src/shadcn_for_pyqt/utils/: oklch_to_hex.py
src/shadcn_for_pyqt/widgets/: base.py  button.py
