[project]
name = "shadcn-for-pyqt"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Augusto",email = "pedr.augustobarbosa.aparecido@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "taskipy (>=1.14.1,<2.0.0)",
    "pyqt6 (>=6.9.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "shadcn_for_pyqt", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
